vcluster_versioned_docs/version-0.27.0/reference/annotations.mdx
---
title: Annotations and Labels Reference
sidebar_label: Annotations & Labels
sidebar_position: 5
description: Reference documentation for vCluster sync annotations and labels
---

<!-- vale off -->

# Annotations and labels reference {#annotations-reference}

This page documents the well-known annotations and labels in the `vcluster.loft.sh` namespace used by vCluster for resource synchronization between virtual and host clusters.


## Needs documentation {#needs-documentation}

:::caution
The following annotations were detected in the codebase but lack full documentation.
Entries are auto-generated stubs.
:::

### loft.sh/agent-values {#loft-sh-agent-values}

**Type:** Annotation

**Example:** `loft.sh/agent-values: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/app {#loft-sh-app}

**Type:** Label

**Example:** `loft.sh/app: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/custom-links {#loft-sh-custom-links}

**Type:** Annotation

**Example:** `loft.sh/custom-links: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/direct-cluster-endpoint {#loft-sh-direct-cluster-endpoint}

**Type:** Annotation

**Example:** `loft.sh/direct-cluster-endpoint: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/direct-cluster-endpoint-ca-data {#loft-sh-direct-cluster-endpoint-ca-data}

**Type:** Annotation

**Example:** `loft.sh/direct-cluster-endpoint-ca-data: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/direct-cluster-endpoint-insecure {#loft-sh-direct-cluster-endpoint-insecure}

**Type:** Annotation

**Example:** `loft.sh/direct-cluster-endpoint-insecure: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/non-deletable {#loft-sh-non-deletable}

**Type:** Annotation

**Example:** `loft.sh/non-deletable: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/paused {#loft-sh-paused}

**Type:** Annotation

**Example:** `loft.sh/paused: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/paused-date {#loft-sh-paused-date}

**Type:** Annotation

**Example:** `loft.sh/paused-date: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/paused-replicas {#loft-sh-paused-replicas}

**Type:** Annotation

**Example:** `loft.sh/paused-replicas: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/project-secret {#loft-sh-project-secret}

**Type:** Annotation

**Example:** `loft.sh/project-secret: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/restoring {#loft-sh-restoring}

**Type:** Annotation

**Example:** `loft.sh/restoring: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/sleep-mode {#loft-sh-sleep-mode}

**Type:** Label

**Example:** `loft.sh/sleep-mode: ""`

**Used on:** TODO

TODO: Add description.

### loft.sh/url {#loft-sh-url}

**Type:** Annotation

**Example:** `loft.sh/url: ""`

**Used on:** TODO

TODO: Add description.

### sleepmode.loft.sh/sleeping-since {#sleepmode-loft-sh-sleeping-since}

**Type:** Annotation

**Example:** `sleepmode.loft.sh/sleeping-since: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/apply {#vcluster-loft-sh-apply}

**Type:** Annotation

**Example:** `vcluster.loft.sh/apply: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/belongs-to {#vcluster-loft-sh-belongs-to}

**Type:** Label

**Example:** `vcluster.loft.sh/belongs-to: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/block-deletion {#vcluster-loft-sh-block-deletion}

**Type:** Annotation

**Example:** `vcluster.loft.sh/block-deletion: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/controlled-by {#vcluster-loft-sh-controlled-by}

**Type:** Label

**Example:** `vcluster.loft.sh/controlled-by: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/created {#vcluster-loft-sh-created}

**Type:** Annotation

**Example:** `vcluster.loft.sh/created: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/created-by-cli {#vcluster-loft-sh-created-by-cli}

**Type:** Label

**Example:** `vcluster.loft.sh/created-by-cli: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/disable-subdomain-rewrite {#vcluster-loft-sh-disable-subdomain-rewrite}

**Type:** Annotation

**Example:** `vcluster.loft.sh/disable-subdomain-rewrite: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/distro {#vcluster-loft-sh-distro}

**Type:** Annotation

**Example:** `vcluster.loft.sh/distro: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/fake-node {#vcluster-loft-sh-fake-node}

**Type:** Annotation

**Example:** `vcluster.loft.sh/fake-node: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/fake-pv {#vcluster-loft-sh-fake-pv}

**Type:** Annotation

**Example:** `vcluster.loft.sh/fake-pv: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/force-sync {#vcluster-loft-sh-force-sync}

**Type:** Annotation

**Example:** `vcluster.loft.sh/force-sync: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/host-ip {#vcluster-loft-sh-host-ip}

**Type:** Annotation

**Example:** `vcluster.loft.sh/host-ip: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/host-ips {#vcluster-loft-sh-host-ips}

**Type:** Annotation

**Example:** `vcluster.loft.sh/host-ips: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/host-pv {#vcluster-loft-sh-host-pv}

**Type:** Annotation

**Example:** `vcluster.loft.sh/host-pv: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/host-volumesnapshotcontent {#vcluster-loft-sh-host-volumesnapshotcontent}

**Type:** Annotation

**Example:** `vcluster.loft.sh/host-volumesnapshotcontent: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/hosts-rewritten {#vcluster-loft-sh-hosts-rewritten}

**Type:** Annotation

**Example:** `vcluster.loft.sh/hosts-rewritten: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/import {#vcluster-loft-sh-import}

**Type:** Annotation

**Example:** `vcluster.loft.sh/import: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/label {#vcluster-loft-sh-label}

**Type:** Label

**Example:** `vcluster.loft.sh/label: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/labels {#vcluster-loft-sh-labels}

**Type:** Label

**Example:** `vcluster.loft.sh/labels: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/lock {#vcluster-loft-sh-lock}

**Type:** Annotation

**Example:** `vcluster.loft.sh/lock: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/managed-annotations {#vcluster-loft-sh-managed-annotations}

**Type:** Annotation

**Example:** `vcluster.loft.sh/managed-annotations: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/managed-by {#vcluster-loft-sh-managed-by}

**Type:** Label

**Example:** `vcluster.loft.sh/managed-by: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/managed-labels {#vcluster-loft-sh-managed-labels}

**Type:** Label

**Example:** `vcluster.loft.sh/managed-labels: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/migrated-from-k3s {#vcluster-loft-sh-migrated-from-k3s}

**Type:** Annotation

**Example:** `vcluster.loft.sh/migrated-from-k3s: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/name {#vcluster-loft-sh-name}

**Type:** Annotation

**Example:** `vcluster.loft.sh/name: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/namespace {#vcluster-loft-sh-namespace}

**Type:** Label

**Example:** `vcluster.loft.sh/namespace: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/node {#vcluster-loft-sh-node}

**Type:** Label

**Example:** `vcluster.loft.sh/node: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/ns-label {#vcluster-loft-sh-ns-label}

**Type:** Label

**Example:** `vcluster.loft.sh/ns-label: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-host-name {#vcluster-loft-sh-object-host-name}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-host-name: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-host-namespace {#vcluster-loft-sh-object-host-namespace}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-host-namespace: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-imported {#vcluster-loft-sh-object-imported}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-imported: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-kind {#vcluster-loft-sh-object-kind}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-kind: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-name {#vcluster-loft-sh-object-name}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-name: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-namespace {#vcluster-loft-sh-object-namespace}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-namespace: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/object-uid {#vcluster-loft-sh-object-uid}

**Type:** Annotation

**Example:** `vcluster.loft.sh/object-uid: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/original-taints {#vcluster-loft-sh-original-taints}

**Type:** Annotation

**Example:** `vcluster.loft.sh/original-taints: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/owner-references {#vcluster-loft-sh-owner-references}

**Type:** Annotation

**Example:** `vcluster.loft.sh/owner-references: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/owner-set-kind {#vcluster-loft-sh-owner-set-kind}

**Type:** Annotation

**Example:** `vcluster.loft.sh/owner-set-kind: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/physical-volumesnapshotcontent-gc {#vcluster-loft-sh-physical-volumesnapshotcontent-gc}

**Type:** Finalizer

**Example:** `vcluster.loft.sh/physical-volumesnapshotcontent-gc: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/service-account-name {#vcluster-loft-sh-service-account-name}

**Type:** Annotation

**Example:** `vcluster.loft.sh/service-account-name: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/service-cidr {#vcluster-loft-sh-service-cidr}

**Type:** Annotation

**Example:** `vcluster.loft.sh/service-cidr: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/skip-backsync {#vcluster-loft-sh-skip-backsync}

**Type:** Annotation

**Example:** `vcluster.loft.sh/skip-backsync: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/skip-translate {#vcluster-loft-sh-skip-translate}

**Type:** Annotation

**Example:** `vcluster.loft.sh/skip-translate: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/standalone-endpoints {#vcluster-loft-sh-standalone-endpoints}

**Type:** Annotation

**Example:** `vcluster.loft.sh/standalone-endpoints: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/status {#vcluster-loft-sh-status}

**Type:** Annotation

**Example:** `vcluster.loft.sh/status: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/store {#vcluster-loft-sh-store}

**Type:** Annotation

**Example:** `vcluster.loft.sh/store: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/token {#vcluster-loft-sh-token}

**Type:** Label

**Example:** `vcluster.loft.sh/token: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/token-node-type {#vcluster-loft-sh-token-node-type}

**Type:** Annotation

**Example:** `vcluster.loft.sh/token-node-type: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/uid {#vcluster-loft-sh-uid}

**Type:** Annotation

**Example:** `vcluster.loft.sh/uid: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/upgrade-node {#vcluster-loft-sh-upgrade-node}

**Type:** Annotation

**Example:** `vcluster.loft.sh/upgrade-node: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/vcluster-name {#vcluster-loft-sh-vcluster-name}

**Type:** Annotation

**Example:** `vcluster.loft.sh/vcluster-name: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/vcluster-namespace {#vcluster-loft-sh-vcluster-namespace}

**Type:** Annotation

**Example:** `vcluster.loft.sh/vcluster-namespace: ""`

**Used on:** TODO

TODO: Add description.

### vcluster.loft.sh/vcluster-test-ingress-controller {#vcluster-loft-sh-vcluster-test-ingress-controller}

**Type:** Annotation

**Example:** `vcluster.loft.sh/vcluster-test-ingress-controller: ""`

**Used on:** TODO

TODO: Add description.

<!-- vale on -->
